@@ -6,6 +6,7 @@
 	* Removed dialog separators to be HIG compliant
 	* src/lib/gsudoku.py Stop number pop-up from visibly moving when created
 	* src/lib/gsudoku.py Stop number pop-up from being in taskbar list (Bug #406767)
+	* src/lib/gnome_sudoku.py Change title name from 'Gnome Sudoku' to 'Sudoku' (Bug #410433)
 
 2007-03-24  Robert Ancell <robert.ancell@gmail.com>
 
